--- a/portfolio.css
+++ b/portfolio.css
@@ -77,7 +77,7 @@ main{
     margin: 0 auto;
 }
 main section{
-    margin-top: 130px
+    margin-top: 130px;
 }
 /* about section start now  */
 .about{
@@ -120,21 +120,47 @@ main section{
 .skills-container{
     display: flex;
     gap: 40px;
+    
 }
 .skill{
-    width: 267px;
-    height: 377px; 
+    /* width: 267px;
+    height: 377px;  */
     padding: 30px;
     border-radius: 5px;
     background: #FFF;
     box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
-    justify-content: space-between;
+    /* justify-content: space-between; */
 }
 .skill-description{
     color:  #757575;
- font-size: 16px;
- font-weight: 400;
+  font-size: 16px;
+  font-weight: 400;
   padding: 10px 20px;
   margin-top: 20px;
 
 }
+/*********** resume section  ************/
+.resume-column-title{
+    color:  #474747;
+    font-size: 30px;
+   font-weight: 700;
+   margin-bottom: 10px;
+}
+.resume-item-institute{
+    margin-bottom: 20px;
+   margin-top: 0px;
+}
+.resume-container{
+    display: flex;
+    gap: 50px;
+}
+.resume-item-institute, .resume-item-description{
+    color:  #757575;
+   font-size: 16px; 
+  font-weight: 400;
+}
+.download-cv{
+    text-align: center;
+    margin-top: 60px;
+}
+    
